Add images and update image references

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Comic Book Quote Machine</title>
-        <link rel="stylesheet" href="src/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <img id="title" src="https://i.imgur.com/3eTteIE.png">
-        <img id="quote_box" src="https://i.imgur.com/K6JgjXe.png">
+        <img id="title" src="images/title.png">
+        <img id="quote_box" src="images/action-bubble.png">
         <p id="quote_text">Message will go here.</p>
         
         <div id="buttons">
