Rework style positioning

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,9 @@
 
     <body>
         <img id="title" src="images/title.png">
-        <img id="quote_box" src="images/action-bubble.png">
-        <p id="quote_text">Message will go here.</p>
+        <div id="action-bubble">
+            <p id="quote-text">Message will go here</p>
+        </div>
         
         <div id="buttons">
           <button id = "getQuote" class = "btn">
