Remove references to 'tweet' and rework button scheme

--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,12 @@
 
     <body>
         <img id="title" src="images/title.png">
+
         <div id="action-bubble">
             <p id="quote-text">Message will go here</p>
         </div>
         
-        <div id="buttons">
-          <button id = "getQuote" class = "btn">
-              Get Quote
-          </button>
-          <button id = "tweet" class = "btn">
-              Tweet
-            </button>
-        </div>
+        <div id="get-quote">Get Quote</div>
 
         <script>
             var quoteCollection = {
