Restructure project folder for GitHub pages

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Comic Book Quote Machine</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="src/style.css">
     </head>
 
     <body>
-        <img id="title" src="images/title.png">
+        <img id="title" src="src/images/title.png">
 
         <div id="action-bubble">
             <p id="quote-text"></p>
